--- a/ch.html
+++ b/ch.html
@@ -3,8 +3,18 @@
     <head>
         <title>Страница главы</title>
         <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/manga.css">
-        <script type="text/javascript" src="js/manga.js"></script>
+        <link rel="stylesheet" href="css/ch.css">
+        <link rel="stylesheet" href="css/color-dark.css">
+        <script type="text/javascript" src="js/ch.js"></script>
+        <script type="text/javascript" src="js/theming.js"></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-WBB07CK3DY"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-WBB07CK3DY');
+        </script>
         <meta name="viewport" content="width=device-width">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
         <meta property="og:title" content="Глава">
@@ -12,6 +22,9 @@
         <meta property="og:description" content="Страница главы">
     </head>
     <body>
+        <script type="text/javascript">
+            startstylepage();
+        </script>
         <div class="body-trans">
             <div id="maindiv">
                 <progress class="progress-page" id="progresspage"></progress><br><h id="titlesys"></h>
@@ -31,12 +44,13 @@
                             <button class="card-button-ch nav-button-fullscreen"  onclick="toggleFullScreen()">Экран</button><button class="card-button-ch nav-button-home"  onclick="manga_page()">Главы</button>
                         </div>
                         <div id="copyright" class="copyright">
-                            <a class="aace" href="mailto:dcma@nyaa.ninja?subject=Manga-DCMA" target="_blank">/DCMA</a> | <a class="aace" href=".">/Главная</a> | <a class="aace" href="https://t.me/Manga_nyaa_ninja" target="_blank">/Telegram</a>
+                            <a class="aace" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace" href=".">/Главная</a> | <a class="aace" href="https://t.me/Manga_nyaa_ninja" target="_blank">/Telegram</a><br>
+                            <a class="aace" onclick="swap_theme(1)">Тьма</a> <span class="aace">или</span> <a class="aace" onclick="swap_theme(2)">Свет</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <p id="infostart" class="invis2"></p><p id="infoend" class="invis2"></p><p id="infohead" class="invis2"></p>
+            <p id="infotitle" class="invis2"></p><p id="infostart" class="invis2"></p><p id="infoend" class="invis2"></p><p id="infohead" class="invis2"></p>
         </div>
         <script type="text/javascript">
             load_page_first();
