--- a/ch.html
+++ b/ch.html
@@ -45,7 +45,7 @@
                         </div>
                         <div id="copyright" class="copyright">
                             <a class="aace" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace" href=".">/Главная</a> | <a class="aace" href="https://t.me/Manga_nyaa_ninja" target="_blank">/Telegram</a><br>
-                            <a class="aace" onclick="swap_theme(1)">Тьма</a> <span class="aace">или</span> <a class="aace" onclick="swap_theme(2)">Свет</a>
+                            <a class="aace" href="setting.html">Настройки</a>
                         </div>
                     </div>
                 </div>
