--- a/manga.html
+++ b/manga.html
@@ -38,13 +38,17 @@
                         <p id="cardinfo2"></p>
                         <p id="cardinfo3"></p>
                     </div>
+                    <div id="cardinfo" class="card">
+                        <p>Описание:</p>
+                        <p id="descriptionmanga" class="aace"></p>
+                    </div>
                     <div id="cardinfoch" class="cardch">
                         <p>Главы:</p>
                         <p id="helper1" class="invis"></p>
                     </div>
                     <div class="copyright">
-                        <a class="aace" href="mailto:dcma@nyaa.ninja?subject=Manga-DCMA" target="_blank">/DCMA</a> | <a class="aace" href=".">/Главная</a> | <a class="aace" href="https://t.me/Manga_nyaa_ninja" target="_blank">/Telegram</a><br>
-                        <a class="aace" onclick="swap_theme(1)">Тьма</a> <span class="aace">или</span> <a class="aace" onclick="swap_theme(2)">Свет</a>
+                        <a class="aace" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace" href=".">/Главная</a> | <a class="aace" href="https://t.me/Manga_nyaa_ninja" target="_blank">/Telegram</a><br>
+                        <a class="aace" href="setting.html">Настройки</a>
                     </div>
                 </div>
             </div>
