--- a/setting.html
+++ b/setting.html
@@ -3,8 +3,7 @@
     <head>
         <title>Loading...</title>
         <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/index.css">
-        <script type="text/javascript" src="js/index.js"></script>
+        <link rel="stylesheet" href="css/setting.css">
         <script type="text/javascript" src="js/theming.js"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-WBB07CK3DY"></script>
@@ -30,23 +29,22 @@
         </script>
         <div class="body-trans">
             <div id="maindiv">
-                <progress class="progress-page" id="progresspage"></progress><br><h id="titlesys"></h>
                 <div id="bodydiv">
                     <img id="cover" class="cover">
                     <div id="title" class="titlediv">
-                        <h1>Manga.nyaa.ninja</h1>
+                        <h1>Настройки</h1>
                     </div>
-                    <a class="aace" href="https://discord.gg/WGktEbWTEV" target="_blank">[Discord] Новости на Silver Town</a>
-                    <p id="helper1" class="invis"></p>
+                    <div class="al-left">
+                        <p class="aace">Настройки хранятся на каждом устройстве отдельно! Время хранения 1 месяц!</p>
+                        <h2 class="aace al-left">Тема</h2>
+                        <button class="theme-button" onclick="swap_theme(1)">Чёрная</button><br>
+                        <button class="theme-button" onclick="swap_theme(2)">Белая</button><br>
+                    </div>
                 </div>
                 <div class="copyright">
-                    <a class="aace" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace" href="https://t.me/Manga_nyaa_ninja" target="_blank">/Telegram</a> | <a class="aace" href="https://github.com/Hell13Cat/static-manga-engine" target="_blank">/GitHub</a><br>
-                    <a class="aace" href="setting.html">Настройки</a>
+                    <a class="aace" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace" href=".">/Главная</a> | <a class="aace" href="https://t.me/Manga_nyaa_ninja" target="_blank">/Telegram</a><br>
                 </div>
             </div>
         </div>
-        <script type="text/javascript">
-            start();
-        </script>
     </body>
 </html>
