--- a/index.html
+++ b/index.html
@@ -32,16 +32,21 @@
             <div id="maindiv">
                 <progress class="progress-page" id="progresspage"></progress><br><h id="titlesys"></h>
                 <div id="bodydiv">
+                    <!—noindex—>
                     <img id="cover" class="cover">
                     <div id="title" class="titlediv">
                         <h1>Manga.nyaa.ninja</h1>
                     </div>
                     <a class="aace" href="https://discord.gg/WGktEbWTEV" target="_blank">[Discord] Новости на Silver Town</a>
+                    <br><button id="lastchbutton" class="card-button last-ch" onclick="last_ch_go()"></button>
+                    <!—/noindex—>
                     <p id="helper1" class="invis"></p>
                 </div>
                 <div class="copyright">
+                    <!—noindex—>
                     <a class="aace" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace" href="https://t.me/Manga_nyaa_ninja" target="_blank">/Telegram</a> | <a class="aace" href="https://github.com/Hell13Cat/static-manga-engine" target="_blank">/GitHub</a><br>
                     <a class="aace" href="setting.html">Настройки</a>
+                    <!—/noindex—>
                 </div>
             </div>
         </div>
