--- a/setting.html
+++ b/setting.html
@@ -37,8 +37,9 @@
                     <div class="al-left">
                         <p class="aace">Настройки хранятся на каждом устройстве отдельно! Время хранения 1 месяц!</p>
                         <h2 class="aace al-left">Тема</h2>
-                        <button class="theme-button" onclick="swap_theme(1)">Чёрная</button><br>
+                        <button class="theme-button" onclick="swap_theme(3)">Темная</button><br>
                         <button class="theme-button" onclick="swap_theme(2)">Белая</button><br>
+                        <button class="theme-button" onclick="swap_theme(1)">Чёрная</button><br>
                     </div>
                 </div>
                 <div class="copyright">
