--- a/ch.html
+++ b/ch.html
@@ -28,7 +28,7 @@
         <div class="body-trans">
             <div id="maindiv">
                 <progress class="progress-page" id="progresspage"></progress><br><h id="titlesys"></h>
-                <div id="bodydiv">
+                <div id="bodydiv" style="visibility: hidden;">
                     <div id="title_ch" class="titlediv">
                         <h2 id="namech"></h2>
                     </div>
