--- a/manga.html
+++ b/manga.html
@@ -28,7 +28,7 @@
         <div class="body-trans">
             <div id="maindiv">
                 <progress class="progress-page" id="progress"></progress><br>
-                <div id="bodydiv">
+                <div id="bodydiv" style="visibility: hidden;">
                     <img id="cover" class="cover">
                     <div id="title" class="titlediv">
                         <h1></h1>
