--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Loading...</title>
         <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/index.css?v=1">
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript" src="js/theming.js"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -14,6 +14,7 @@
             gtag('js', new Date());
             gtag('config', 'G-WBB07CK3DY');
         </script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
         <meta name="viewport" content="width=device-width">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
         <meta property="og:title" content="Главная">
@@ -31,11 +32,11 @@
         <div class="body-trans">
             <div id="maindiv">
                 <progress class="progress-page" id="progresspage"></progress><br><h id="titlesys"></h>
-                <div id="bodydiv">
+                <div id="bodydiv" style="visibility: hidden;">
                     <!—noindex—>
                     <img id="cover" class="cover">
                     <div id="title" class="titlediv">
-                        <h1>Manga.nyaa.ninja</h1>
+                        <h1>Manga.<span class="title-index-nyaa">nyaa</span>.ninja</h1>
                     </div>
                     <a class="aace" href="https://discord.gg/WGktEbWTEV" target="_blank">[Discord] Новости на Silver Town</a>
                     <br><button id="lastchbutton" class="card-button last-ch" onclick="last_ch_go()"></button>
