--- a/ch.html
+++ b/ch.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Страница главы</title>
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/ch.css">
+        <link rel="stylesheet" href="css/style.css?v=2">
+        <link rel="stylesheet" href="css/ch.css?v=2">
         <link rel="stylesheet" href="css/color-dark.css">
         <script type="text/javascript" src="js/ch.js"></script>
         <script type="text/javascript" src="js/theming.js"></script>
@@ -45,8 +45,8 @@
                             <button class="card-button-ch nav-button-fullscreen"  onclick="toggleFullScreen()">Экран</button><button class="card-button-ch nav-button-home"  onclick="manga_page()">Главы</button>
                         </div>
                         <div id="copyright" class="copyright">
-                            <a class="aace" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace" href=".">/Главная</a> | <a class="aace" href="https://t.me/Manga_nyaa_ninja" target="_blank">/Telegram</a><br>
-                            <a class="aace" href="setting.html">Настройки</a>
+                            <a class="aace links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace links" href=".">/Главная</a> | <a class="aace links" href="https://t.me/Manga_nyaa_ninja" target="_blank">/Telegram</a><br>
+                            <a class="aace links" href="setting.html">Настройки</a>
                         </div>
                     </div>
                 </div>
