--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Loading...</title>
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/index.css?v=1">
+        <link rel="stylesheet" href="css/style.css?v=2">
+        <link rel="stylesheet" href="css/index.css?v=2">
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript" src="js/theming.js"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -38,15 +38,14 @@
                     <div id="title" class="titlediv">
                         <h1>Manga.<span class="title-index-nyaa">nyaa</span>.ninja</h1>
                     </div>
-                    <a class="aace" href="https://discord.gg/WGktEbWTEV" target="_blank">[Discord] Новости на Silver Town</a>
-                    <br><button id="lastchbutton" class="card-button last-ch" onclick="last_ch_go()"></button>
+                    <a class="aace links" href="https://discord.gg/WGktEbWTEV" target="_blank"><button class="card-button promo-link">[Discord] Новости на Silver Town</button></a><button id="lastchbutton" class="card-button last-ch" onclick="last_ch_go()"></button>
                     <!—/noindex—>
                     <p id="helper1" class="invis"></p>
                 </div>
                 <div class="copyright">
                     <!—noindex—>
-                    <a class="aace" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace" href="https://t.me/Manga_nyaa_ninja" target="_blank">/Telegram</a> | <a class="aace" href="https://github.com/Hell13Cat/static-manga-engine" target="_blank">/GitHub</a><br>
-                    <a class="aace" href="setting.html">Настройки</a>
+                    <a class="aace links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace links" href="https://t.me/Manga_nyaa_ninja" target="_blank">/Telegram</a> | <a class="aace links" href="https://github.com/Hell13Cat/static-manga-engine" target="_blank">/GitHub</a><br>
+                    <a class="aace links" href="setting.html">Настройки</a>
                     <!—/noindex—>
                 </div>
             </div>
