--- a/manga.html
+++ b/manga.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Страница манги</title>
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/manga.css">
+        <link rel="stylesheet" href="css/style.css?v=2">
+        <link rel="stylesheet" href="css/manga.css?v=2">
         <link rel="stylesheet" href="css/color-dark.css">
         <script type="text/javascript" src="js/manga.js"></script>
         <script type="text/javascript" src="js/theming.js"></script>
@@ -47,8 +47,8 @@
                         <p id="helper1" class="invis"></p>
                     </div>
                     <div class="copyright">
-                        <a class="aace" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace" href=".">/Главная</a> | <a class="aace" href="https://t.me/Manga_nyaa_ninja" target="_blank">/Telegram</a><br>
-                        <a class="aace" href="setting.html">Настройки</a>
+                        <a class="aace links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace links" href=".">/Главная</a> | <a class="aace links" href="https://t.me/Manga_nyaa_ninja" target="_blank">/Telegram</a><br>
+                        <a class="aace links" href="setting.html">Настройки</a>
                     </div>
                 </div>
             </div>
