--- a/setting.html
+++ b/setting.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Loading...</title>
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/setting.css">
+        <link rel="stylesheet" href="css/style.css?v=2">
+        <link rel="stylesheet" href="css/setting.css?v=2">
         <script type="text/javascript" src="js/theming.js"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-WBB07CK3DY"></script>
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div class="copyright">
-                    <a class="aace" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace" href=".">/Главная</a> | <a class="aace" href="https://t.me/Manga_nyaa_ninja" target="_blank">/Telegram</a><br>
+                    <a class="aace links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace links" href=".">/Главная</a> | <a class="aace links" href="https://t.me/Manga_nyaa_ninja" target="_blank">/Telegram</a><br>
                 </div>
             </div>
         </div>
