--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Loading...</title>
-        <link rel="stylesheet" href="css/style.css?v=2">
-        <link rel="stylesheet" href="css/index.css?v=2">
+        <link rel="stylesheet" href="css/style.css?v=3">
+        <link rel="stylesheet" href="css/index.css?v=3">
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript" src="js/theming.js"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -20,6 +20,7 @@
         <meta property="og:title" content="Главная">
         <meta property="og:site_name" content="manga.nyaa.ninja">
         <meta property="og:description" content="Главная страница">
+        <meta property="og:image" content="android-chrome-512x512.png">
         <!--
         <meta name="viewport" content="height=device-height">
         <meta name="viewport" content="user-scalable=yes">
@@ -33,20 +34,28 @@
             <div id="maindiv">
                 <progress class="progress-page" id="progresspage"></progress><br><h id="titlesys"></h>
                 <div id="bodydiv" style="visibility: hidden;">
-                    <!—noindex—>
-                    <img id="cover" class="cover">
-                    <div id="title" class="titlediv">
-                        <h1>Manga.<span class="title-index-nyaa">nyaa</span>.ninja</h1>
+                    <div class="content">
+                        <!—noindex—>
+                        <div class="onecol">
+                            <img id="cover" class="cover">
+                            <div id="title" class="titlediv">
+                                <h1>Manga.<span class="title-index-nyaa">nyaa</span>.ninja</h1>
+                            </div>
+                            <a class="aace links" href="https://discord.gg/WGktEbWTEV" target="_blank"><button class="card-button promo-link">[Discord] Новости на Silver Town</button></a><button id="lastchbutton" class="card-button last-ch" onclick="last_ch_go()"></button>
+                            <div class="copyright pc-only">
+                                <a class="aace links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace links" href="https://t.me/nyaa_ninja" target="_blank">/Telegram</a> | <a class="aace links" href="https://github.com/Hell13Cat/static-manga-engine" target="_blank">/GitHub</a><br>
+                                <a class="aace links" href="setting.html">Настройки</a>
+                            </div>
+                        </div>
+                        <!—/noindex—>
+                        <div class="twocol">
+                            <p id="helper1" class="invis"></p>
+                        </div>
+                        <div class="copyright mobile-only">
+                            <a class="aace links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace links" href="https://t.me/nyaa_ninja" target="_blank">/Telegram</a> | <a class="aace links" href="https://github.com/Hell13Cat/static-manga-engine" target="_blank">/GitHub</a><br>
+                            <a class="aace links" href="setting.html">Настройки</a>
+                        </div>
                     </div>
-                    <a class="aace links" href="https://discord.gg/WGktEbWTEV" target="_blank"><button class="card-button promo-link">[Discord] Новости на Silver Town</button></a><button id="lastchbutton" class="card-button last-ch" onclick="last_ch_go()"></button>
-                    <!—/noindex—>
-                    <p id="helper1" class="invis"></p>
-                </div>
-                <div class="copyright">
-                    <!—noindex—>
-                    <a class="aace links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace links" href="https://t.me/Manga_nyaa_ninja" target="_blank">/Telegram</a> | <a class="aace links" href="https://github.com/Hell13Cat/static-manga-engine" target="_blank">/GitHub</a><br>
-                    <a class="aace links" href="setting.html">Настройки</a>
-                    <!—/noindex—>
                 </div>
             </div>
         </div>
