--- a/setting.html
+++ b/setting.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Loading...</title>
-        <link rel="stylesheet" href="css/style.css?v=2">
-        <link rel="stylesheet" href="css/setting.css?v=2">
+        <link rel="stylesheet" href="css/style.css?v=3">
+        <link rel="stylesheet" href="css/setting.css?v=3">
         <script type="text/javascript" src="js/theming.js"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-WBB07CK3DY"></script>
@@ -17,7 +17,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
         <meta property="og:title" content="Главная">
         <meta property="og:site_name" content="manga.nyaa.ninja">
-        <meta property="og:description" content="Главная страница">
+        <meta property="og:description" content="Настройки">
+        <meta property="og:image" content="android-chrome-512x512.png">
         <!--
         <meta name="viewport" content="height=device-height">
         <meta name="viewport" content="user-scalable=yes">
@@ -29,21 +30,27 @@
         </script>
         <div class="body-trans">
             <div id="maindiv">
-                <div id="bodydiv">
-                    <img id="cover" class="cover">
-                    <div id="title" class="titlediv">
-                        <h1>Настройки</h1>
+                <div id="bodydiv" class="content">
+                    <div class="onecol">
+                        <div id="title" class="titlediv">
+                            <h1>Настройки</h1>
+                        </div>
+                        <div class="copyright pc-only">
+                            <a class="aace links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace links" href=".">/Главная</a> | <a class="aace links" href="https://t.me/nyaa_ninja" target="_blank">/Telegram</a><br>
+                        </div>
                     </div>
-                    <div class="al-left">
-                        <p class="aace">Настройки хранятся на каждом устройстве отдельно! Время хранения 1 месяц!</p>
-                        <h2 class="aace al-left">Тема</h2>
-                        <button class="theme-button" onclick="swap_theme(3)">Темная</button><br>
-                        <button class="theme-button" onclick="swap_theme(2)">Белая</button><br>
-                        <button class="theme-button" onclick="swap_theme(1)">Чёрная</button><br>
+                    <div class="twocol">
+                        <div class="al-left">
+                            <p class="aace">Настройки хранятся на каждом устройстве отдельно! Время хранения 1 месяц!</p>
+                            <h2 class="aace al-left">Тема</h2>
+                            <button class="theme-button" onclick="swap_theme(3)">Темная</button><br>
+                            <button class="theme-button" onclick="swap_theme(2)">Белая</button><br>
+                            <button class="theme-button" onclick="swap_theme(1)">Чёрная</button><br>
+                        </div>
+                        <div class="copyright mobile-only">
+                            <a class="aace links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace links" href=".">/Главная</a> | <a class="aace links" href="https://t.me/nyaa_ninja" target="_blank">/Telegram</a><br>
+                        </div>
                     </div>
-                </div>
-                <div class="copyright">
-                    <a class="aace links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace links" href=".">/Главная</a> | <a class="aace links" href="https://t.me/Manga_nyaa_ninja" target="_blank">/Telegram</a><br>
                 </div>
             </div>
         </div>
