--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Loading...</title>
-        <link rel="stylesheet" href="css/style.css?v=3">
-        <link rel="stylesheet" href="css/index.css?v=3">
+        <link rel="stylesheet" href="css/style.css?v=4">
+        <link rel="stylesheet" href="css/index.css?v=4">
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript" src="js/theming.js"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -39,12 +39,17 @@
                         <div class="onecol">
                             <img id="cover" class="cover">
                             <div id="title" class="titlediv">
-                                <h1>Manga.<span class="title-index-nyaa">nyaa</span>.ninja</h1>
+                                <img class="logo-data" src="img/logo-c.png">
                             </div>
-                            <a class="aace links" href="https://discord.gg/WGktEbWTEV" target="_blank"><button class="card-button promo-link">[Discord] Новости на Silver Town</button></a><button id="lastchbutton" class="card-button last-ch" onclick="last_ch_go()"></button>
-                            <div class="copyright pc-only">
-                                <a class="aace links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace links" href="https://t.me/nyaa_ninja" target="_blank">/Telegram</a> | <a class="aace links" href="https://github.com/Hell13Cat/static-manga-engine" target="_blank">/GitHub</a><br>
-                                <a class="aace links" href="setting.html">Настройки</a>
+                            <a class="aace links button-e" href="https://discord.gg/WGktEbWTEV" target="_blank"><button class="nav-button">[Discord] Новости на Silver Town</button></a>
+                            <hr class="pc-only nav-hr">
+                            <button id="lastchbutton" class="nav-button button-e" onclick="last_ch_go()"></button>
+                            <div class="pc-only">
+                                <a class="aace links button-e" href="setting.html"><button class="nav-button">Настройки</button></a>
+                                <hr class="pc-only nav-hr">
+                                <a class="aace links button-e" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank"><button class="nav-button">DCMA</button></a>
+                                <a class="aace links button-e" href="https://t.me/nyaa_ninja" target="_blank"><button class="nav-button">Telegram</button></a>
+                                <a class="aace links button-e" href="https://github.com/Hell13Cat/static-manga-engine" target="_blank"><button class="nav-button">GitHub</button></a><br>
                             </div>
                         </div>
                         <!—/noindex—>
