--- a/manga.html
+++ b/manga.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Страница манги</title>
-        <link rel="stylesheet" href="css/style.css?v=3">
-        <link rel="stylesheet" href="css/manga.css?v=3">
+        <link rel="stylesheet" href="css/style.css?v=4">
+        <link rel="stylesheet" href="css/manga.css?v=4">
         <link rel="stylesheet" href="css/color-dark.css">
         <script type="text/javascript" src="js/manga.js"></script>
         <script type="text/javascript" src="js/theming.js"></script>
@@ -32,12 +32,15 @@
                 <div class="content" id="bodydiv" style="visibility: hidden;">
                     <div class="onecol">
                         <img id="cover" class="cover">
-                        <div id="title" class="titlediv">
+                        <div id="title" class="aace nav-button">
                             <h1></h1>
                         </div>
-                        <div class="copyright pc-only">
-                            <a class="aace links" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank">/DCMA</a> | <a class="aace links" href=".">/Главная</a> | <a class="aace links" href="https://t.me/nyaa_ninja" target="_blank">/Telegram</a><br>
-                            <a class="aace links" href="setting.html">Настройки</a>
+                        <div class="pc-only">
+                            <a class="aace links button-e" href="."><button class="nav-button">Главная</button></a>
+                            <a class="aace links button-e" href="setting.html"><button class="nav-button">Настройки</button></a>
+                            <hr class="pc-only nav-hr">
+                            <a class="aace links button-e" href="mailto:dcma@nyaa.ninja?subject=Manga Site" target="_blank"><button class="nav-button">DCMA</button></a>
+                            <a class="aace links button-e" href="https://t.me/nyaa_ninja" target="_blank"><button class="nav-button">Telegram</button></a><br>
                         </div>
                     </div>
                     <div class="twocol">
